boltffi_backend/tests/kotlin/snapshots/kotlin__callback__kotlin_target_renders_callback_encoded_parameters.snap
---
source: boltffi_backend/tests/kotlin/callback.rs
expression: "rendered_fixture(\"callback/callback_byte_slice_parameter\")"
---
===== com/boltffi/demo/Demo.kt =====
@file:OptIn(kotlin.ExperimentalUnsignedTypes::class)

package com.boltffi.demo

interface Listener {
    fun onName(name: String)
}

private object ListenerMap {
    private val map = java.util.concurrent.ConcurrentHashMap<Long, Listener>()
    private val counter = java.util.concurrent.atomic.AtomicLong(1L)

    fun insert(value: Listener): Long {
        val handle = counter.getAndAdd(2L)
        map[handle] = value
        return handle
    }

    fun get(handle: Long): Listener? = map[handle]

    fun remove(handle: Long): Listener? = map.remove(handle)

    fun clone(handle: Long): Long {
        val value = map[handle] ?: return 0L
        return insert(value)
    }
}

object ListenerCallbacks {
    @JvmStatic
    fun free(handle: Long) {
        ListenerMap.remove(handle)
    }

    @JvmStatic
    fun clone(handle: Long): Long {
        return ListenerMap.clone(handle)
    }

    @JvmStatic
    fun on_name(handle: Long, name: ByteArray) {
        val impl = ListenerMap.get(handle) ?: error("ListenerMap: invalid handle $handle")
        val __boltffi_name_reader = WireReader(name)
        val __boltffi_name_value = __boltffi_name_reader.readString()
        impl.onName(__boltffi_name_value)
    }
}

object ListenerBridge {
    fun create(value: Listener): Long {
        return ListenerMap.insert(value)
    }
}
