boltffi_backend/tests/kotlin/snapshots/kotlin__callback__kotlin_target_renders_callback_handle_returns.snap
---
source: boltffi_backend/tests/kotlin/callback.rs
expression: "rendered_fixture(\"callback/callback_handle_return\")"
---
===== com/boltffi/demo/Demo.kt =====
@file:OptIn(kotlin.ExperimentalUnsignedTypes::class)

package com.boltffi.demo
@Suppress("FunctionName")
private object Native {
    @JvmStatic external fun boltffi_callback_handle_demo_listener_on_value(handle: Long, value: Int): Int
    @JvmStatic external fun boltffi_callback_handle_demo_listener_on_name(handle: Long, name: java.nio.ByteBuffer, __boltffi_name_len: Int): Unit
    @JvmStatic external fun boltffi_function_demo_make_listener(): Long
    @JvmStatic external fun boltffi_callback_handle_clone(handle: Long): Long
    @JvmStatic external fun boltffi_callback_handle_release(handle: Long): Unit
}

interface Listener {
    fun onValue(value: UInt): UInt
    fun onName(name: String)
}

private object ListenerMap {
    private val map = java.util.concurrent.ConcurrentHashMap<Long, Listener>()
    private val counter = java.util.concurrent.atomic.AtomicLong(1L)

    fun insert(value: Listener): Long {
        val handle = counter.getAndAdd(2L)
        map[handle] = value
        return handle
    }

    fun get(handle: Long): Listener? = map[handle]

    fun remove(handle: Long): Listener? = map.remove(handle)

    fun clone(handle: Long): Long {
        val value = map[handle] ?: return 0L
        return insert(value)
    }
}

object ListenerCallbacks {
    @JvmStatic
    fun free(handle: Long) {
        ListenerMap.remove(handle)
    }

    @JvmStatic
    fun clone(handle: Long): Long {
        return ListenerMap.clone(handle)
    }

    @JvmStatic
    fun on_value(handle: Long, value: Int): Int {
        val impl = ListenerMap.get(handle) ?: error("ListenerMap: invalid handle $handle")
        return impl.onValue(value.toUInt()).toInt()
    }

    @JvmStatic
    fun on_name(handle: Long, name: ByteArray) {
        val impl = ListenerMap.get(handle) ?: error("ListenerMap: invalid handle $handle")
        val __boltffi_name_reader = WireReader(name)
        val __boltffi_name_value = __boltffi_name_reader.readString()
        impl.onName(__boltffi_name_value)
    }
}

private class ListenerHandle(private val handle: Long) : Listener, AutoCloseable {
    private var closed = false

    override fun close() {
        if (!closed) {
            Native.boltffi_callback_handle_release(handle)
            closed = true
        }
    }

    private fun requireOpen(): Long {
        check(!closed) { "callback handle is closed" }
        return handle
    }

    override fun onValue(value: UInt): UInt {
        return Native.boltffi_callback_handle_demo_listener_on_value(this.requireOpen(), value.toInt()).toUInt()
    }

    override fun onName(name: String) {
        val __boltffi_name_wire = WireWriterPool.acquire(4 + Utf8Codec.maxBytes(name))
        val __boltffi_name_writer = __boltffi_name_wire.writer
        __boltffi_name_writer.writeString(name)
        try {
            Native.boltffi_callback_handle_demo_listener_on_name(this.requireOpen(), __boltffi_name_wire.directBuffer(), __boltffi_name_wire.size())
        } finally {
            __boltffi_name_wire.close()
        }
    }
}

object ListenerBridge {
    fun create(value: Listener): Long {
        return ListenerMap.insert(value)
    }
}

fun makeListener(): Listener {
    val __boltffi_result = Native.boltffi_function_demo_make_listener()
    return ListenerHandle(__boltffi_result)
}
